correction on hide scrollbar

--- a/client/src/style/app.scss
+++ b/client/src/style/app.scss
@@ -1,8 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@300;400;500;600;700;800;900&display=swap");
 @import "variables";
-html {
-  overflow: scroll;
-}
+
 ::-webkit-scrollbar {
   width: 0px;
   background: transparent; /* make scrollbar transparent */
